--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+
 .titles {
   @apply text-3xl font-bold my-3;
 }
 
 .subtitles {
   @apply text-xl font-bold  mt-10;
+}
+
+.font-primary {
+  font-family: 'Kalam', cursive;
 }
